# fastapi-scaffold

./: README.md  create-fastapi-app.bat  create-fastapi-app.sh  create_fastapi_app.py  pyproject.toml
fastapi_scaffold/: __init__.py  cli.py
