[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-scaffold"
version = "1.0.1"
description = "FastAPI project structure generator"
authors = [{name = "Dumidu Lakshan", email = "dumidu@example.com"}]
readme = "README.md"
license = {text = "MIT"}
keywords = ["fastapi", "scaffold", "generator", "project-template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
create-fastapi-app = "fastapi_scaffold.cli:main"

[project.urls]
"Homepage" = "https://github.com/DumiduLakshan/fastapi-scaffold"
"Bug Reports" = "https://github.com/DumiduLakshan/fastapi-scaffold/issues"
"Source" = "https://github.com/DumiduLakshan/fastapi-scaffold"
